# session-mgmt-mcp

./: .coverage  .coverage-ratchet.json  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_MEMORY_INTEGRATION.md  GEMINI.md  QUALITY_FIX_PLAN.md  QWEN.md  README.md  REFACTORING_PHASE1_SUMMARY.md  REFACTORING_PHASE2_SUMMARY.md  REFACTORING_PHASE3_COMPLETE.md  REFACTORING_PHASE3_PLAN.md  REFACTORING_PHASE4_PLAN.md  REFACTORING_PLAN.md  RENAME_SUMMARY.md  RULES.md  TEST_IMPROVEMENTS.md  TEST_OPTIMIZATION_GUIDE.md  ZUBAN_TYPING_FIXES.md  complexipy.json  complexipy_final.json  complexipy_results_2025_11_27__04:28:53.json  complexipy_results_2025_12_03__00:48:34.json  complexipy_results_2025_12_03__01:00:20.json  coverage.json  pyproject.toml  server_errors.txt  server_errors2.txt  server_errors3.txt  server_errors4.txt  server_errors5.txt  server_errors6.txt  server_errors7.txt  simple_test_assessment.py  sitecustomize.py  (+4 more)
.cache/pre-commit/: db.db
docs/: ACB-TEMPLATES-ADAPTER-PROPOSAL.md  ACB-TEMPLATES-IMPLEMENTATION-PLAN.md  ACB_ADAPTER_BUGS.md  ACB_CONFIG_MIGRATION_SUMMARY.md  ACB_GRAPH_ADAPTER_INVESTIGATION.md  ACB_MIGRATION_COMPLETE.md  ACB_MIGRATION_PHASE3_DEFERRED.md  ACB_MIGRATION_PHASE3_STATUS.md  ACB_MIGRATION_PLAN.md  ACB_MIGRATION_SUMMARY.md  ACB_PHASE3_ARCHITECTURE_REVIEW.md  ACB_STORAGE_ADAPTER_FIX.md  ACB_STORAGE_ADAPTER_GUIDE.md  ARCHITECTURAL_COHERENCE_ASSESSMENT.md  COMPLEXITY_REFACTORING_PROGRESS.md  CRACKERJACK-INTEGRATION.md  CRACKERJACK.md  DUCKPGQ_IMPLEMENTATION.md  HTTPCLIENTADAPTER_INTEGRATION.md  IMPLEMENTATION_PLAN_ANALYSIS.md  KNOWLEDGE_GRAPH_INTEGRATION.md  MCP_COMMON_INTEGRATION_SUMMARY.md  MEMORI_INTEGRATION_PATHWAYS.md  MEMORY_ARCHITECTURE_COMPARISON.md  MIGRATION_FROM_EXTERNAL_MEMORY.md  MIGRATION_GUIDE_ACB.md  MIGRATION_STRATEGY.md  PACKAGE_REORGANIZATION_PROPOSALS.md  PACKAGE_REORGANIZATION_REFINED.md  PATHWAY_1_IMPLEMENTATION_PLAN.md  PHASE-2-PRIORITY-1-COMPLETION.md  PHASE-2-PRIORITY-2-COMPLETION.md  PHASE-2.5-CORE-INFRASTRUCTURE-EXTRACTION-COMPLETE.md  PHASE-2.7-COMPLETION-REVIEW.md  PHASE-2.7-DAY-5-COMPLETION.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_PROGRESS_SUMMARY.md  PHASE3_CODE_QUALITY_REVIEW.md  PLAN_UNIFICATION_SUMMARY.md  QUALITY_ASSESSMENT_AND_GATES.md  (+62 more)
docs/archive/: README.md
docs/developer/: ACB_DI_PATTERNS.md  ARCHITECTURE.md  INTEGRATION.md  QUALITY_SCORING_V2.md
docs/migrations/: README.md  health-check-implementation.md  http-client-adapter.md
docs/reference/: API_REFERENCE.md
docs/user/: CONFIGURATION.md  DEPLOYMENT.md  MCP_TOOLS_REFERENCE.md  QUICK_START.md
scripts/: migrate_graph_database.py  migrate_vector_database.py
session_buddy/: advanced_features.py  cli.py  server.py  server_core.py  server_optimized.py  serverless_mode.py  settings.py
session_buddy/config/: feature_flags.py
session_buddy/core/: features.py  session_manager.py
session_buddy/di/: __init__.py
session_buddy/tools/: session_tools.py
session_buddy/utils/: server_helpers.py
session_mgmt_mcp/: __init__.py  __main__.py  acb_cache_adapter.py  advanced_features.py  advanced_search.py  app_monitor.py  cli.py  config.py  context_manager.py  crackerjack_integration.py  health_checks.py  interruption_manager.py  knowledge_graph_db.py  llm_providers.py  memory_optimizer.py  multi_project_coordinator.py  natural_scheduler.py  parameter_models.py  quality_engine.py  reflection_tools.py  resource_cleanup.py  search_enhanced.py  server.py  server_core.py  server_optimized.py  serverless_mode.py  settings.py  shutdown_manager.py  team_knowledge.py  token_optimizer.py  worktree_manager.py
session_mgmt_mcp/adapters/: __init__.py  knowledge_graph_adapter.py  knowledge_graph_adapter_acb_investigation.py  reflection_adapter.py  serverless_storage_adapter.py  session_storage_adapter.py  storage_registry.py
session_mgmt_mcp/backends/: __init__.py  acb_cache_backend.py  base.py  local_backend.py  redis_backend.py  s3_backend.py
session_mgmt_mcp/config/: feature_flags.py
session_mgmt_mcp/core/: features.py  permissions.py  session_manager.py
session_mgmt_mcp/di/: __init__.py  config.py  constants.py
session_mgmt_mcp/llm/: __init__.py  base.py  security.py
session_mgmt_mcp/memory/: conscious_agent.py  entity_extractor.py  migration.py  persistence.py  schema_v2.py
session_mgmt_mcp/tools/: __init__.py  access_log_tools.py  agent_analyzer.py  conscious_agent_tools.py  crackerjack_tools.py  entity_extraction_tools.py  feature_flags_tools.py  health_tools.py  history_cache.py  knowledge_graph_tools.py  llm_tools.py  memory_tools.py  migration_tools.py  monitoring_tools.py  quality_metrics.py  recommendation_engine.py  search_tools.py  serverless_tools.py  session_tools.py  team_tools.py  test_agent_analyzer.py  test_integration.py  test_quality_metrics.py  test_recommendation_engine.py  validated_memory_tools.py
session_mgmt_mcp/utils/: __init__.py  database_helpers.py  database_pool.py  error_handlers.py  file_utils.py  format_utils.py  git_operations.py  instance_managers.py  lazy_imports.py  logging.py  messages.py  quality_utils.py  quality_utils_v2.py  reflection_utils.py  server_helpers.py  tool_wrapper.py
settings/: session-buddy.yaml
templates/session/: checkpoint.md  handoff.md
tests/: conftest.py  conftest_optimizations.py  helpers.py  test_auto_compaction.py
tests/fixtures/: data_factories.py  mcp_fixtures.py
tests/functional/: test_session_workflows.py
tests/integration/: test_filesystem_extraction.py  test_health_check_integration.py  test_mcp_crackerjack_tools.py  test_mcp_tools.py  test_multi_project_mcp.py  test_serverless_storage.py  test_session_complete_workflow.py  test_session_lifecycle.py  test_session_tools.py  test_token_optimization_mcp.py
tests/mcp/: test_helpers.py
tests/performance/: test_benchmarks.py  test_database_performance.py  test_performance_benchmarks.py  test_token_optimization_performance.py
tests/scripts/: run_tests.py
tests/security/: test_input_validation.py  test_permission_security.py  test_security.py
tests/unit/: test_access_log_stats.py  (+52 more)
(+19 files in other folders)
